objects/TNOPPST__UserMessage__c.object
<CustomObject>
    <fields>
        <fullName>TNOPPST__MsgLine1__c</fullName>
        <label>MsgLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__MsgLine2__c</fullName>
        <label>MsgLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__MsgLine3__c</fullName>
        <label>MsgLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__ReturnPage__c</fullName>
        <label>ReturnPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__UpDateLatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if set, certain &quot;read only&quot; custom fields can be changed.  Mechanism for program to update a field user is not allowed to (eg Quote.TaxNowStatus)</description>
        <label>UpDateLatch</label>
        <type>Checkbox</type>
    </fields>
    <label>UserMessage</label>
    <nameField>
        <label>UserMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>